<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.eyecon.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_diagnosa"
        android:name="com.example.eyecon.ui.diagnosa.DiagnosaFragment"
        android:label="@string/title_diagnosa"
        tools:layout="@layout/fragment_diagnosa" />

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.example.eyecon.ui.history.HistoryFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/navigation_news"
        android:name="com.example.eyecon.ui.news.NewsFragment"
        android:label="@string/title_news"
        tools:layout="@layout/fragment_news" />

    <fragment
        android:id="@+id/navigation_addphoto"
        android:name="com.example.eyecon.ui.addphoto.AddPhotoFragment"
        android:label="@string/camera_icon"
        tools:layout="@layout/fragment_add_photo" />
</navigation>