<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_green"
    tools:context=".auth.RegistrasiActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/rounded_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UseCompoundDrawables">

        <!-- Eye Icon -->
        <ImageView
            android:layout_width="58dp"
            android:layout_height="58dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/eyecon_white" />

        <!-- Text View for the app name -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/app_name"
            android:fontFamily="@font/inter_extrabold"
            android:textSize="36sp"
            android:layout_marginStart="5dp"
            android:textColor="@color/white" />
    </LinearLayout>

    <View
        android:id="@+id/rounded_view_transparant"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="25dp"
        android:background="@drawable/rounded_another_white_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHeight_percent="0.78" />

    <View
        android:id="@+id/rounded_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/rounded_white_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHeight_percent="0.75" />

    <TextView
        android:id="@+id/text_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get"
        android:fontFamily="@font/inter_bold"
        android:textSize="32sp"
        android:textColor="@color/dark_green"
        app:layout_constraintTop_toTopOf="@+id/rounded_view"
        app:layout_constraintStart_toStartOf="@+id/rounded_view"
        app:layout_constraintEnd_toEndOf="@+id/rounded_view"
        android:gravity="center"
        android:layout_marginTop="60dp" />

    <TextView
        android:id="@+id/text_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/free"
        android:fontFamily="@font/inter_reguler"
        android:textSize="15sp"
        android:textColor="@color/dark_green"
        app:layout_constraintTop_toBottomOf="@+id/text_welcome"
        app:layout_constraintStart_toStartOf="@+id/rounded_view"
        app:layout_constraintEnd_toEndOf="@+id/rounded_view"
        android:gravity="center"
        android:layout_marginTop="10dp" />

    <EditText
        android:id="@+id/username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:background="@drawable/rounded_textview_border"
        android:paddingVertical="13dp"
        android:paddingHorizontal="15dp"
        android:layout_marginHorizontal="48dp"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toBottomOf="@+id/text_detail"
        app:layout_constraintStart_toStartOf="@+id/rounded_view"
        app:layout_constraintEnd_toEndOf="@+id/rounded_view"
        android:layout_marginTop="42dp"
        tools:ignore="Autofill,TextFields" />

    <EditText
        android:id="@+id/email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="emailAddress"
        android:hint="@string/email"
        android:background="@drawable/rounded_textview_border"
        android:inputType="textEmailAddress"
        android:paddingVertical="13dp"
        android:paddingHorizontal="15dp"
        android:layout_marginHorizontal="48dp"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toBottomOf="@+id/username"
        app:layout_constraintStart_toStartOf="@+id/rounded_view"
        app:layout_constraintEnd_toEndOf="@+id/rounded_view"
        android:layout_marginTop="16dp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="password"
        android:hint="@string/password"
        android:background="@drawable/rounded_textview_border"
        android:paddingVertical="13dp"
        android:paddingHorizontal="15dp"
        android:password="true"
        android:layout_marginHorizontal="48dp"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toBottomOf="@+id/email"
        app:layout_constraintStart_toStartOf="@+id/rounded_view"
        app:layout_constraintEnd_toEndOf="@+id/rounded_view"
        android:layout_marginTop="16dp"
        tools:ignore="Deprecated,TextFields" />

    <Button
        android:id="@+id/regis_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:fontFamily="@font/inter_bold"
        android:backgroundTint="@color/dark_green"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintStart_toStartOf="@+id/rounded_view"
        app:layout_constraintEnd_toEndOf="@+id/rounded_view"
        android:paddingVertical="12dp"
        android:layout_marginHorizontal="48dp" />

    <LinearLayout
        android:id="@+id/linear_layout_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/regis_button"
        app:layout_constraintStart_toStartOf="@+id/rounded_view"
        app:layout_constraintEnd_toEndOf="@+id/rounded_view"
        android:layout_marginTop="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sudah_punya_akun"
            android:textColor="@color/dark_green"
            android:fontFamily="@font/inter_reguler"
            android:textSize="14sp"
            android:gravity="center_vertical" />

        <TextView
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="@color/dark_green"
            android:fontFamily="@font/inter_bold"
            android:textSize="14sp"
            android:layout_marginStart="5dp"
            android:gravity="center_vertical" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
