<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundLight"
    tools:context=".ui.history.HistoryResultActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:indeterminateTint="#396357"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp" />

        <!-- Added CardView for rounded corners -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/result_image"
                    android:layout_width="350dp"
                    android:layout_height="180dp"
                    android:layout_gravity="center"
                    android:layout_margin="16dp"
                    android:scaleType="fitCenter"
                    android:contentDescription="@string/title_history"
                    app:srcCompat="@drawable/baseline_image_24" />

                <TextView
                    android:id="@+id/result_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginBottom="16dp"
                    android:fontFamily="@font/inter_extrabold"
                    android:text="@string/result"
                    android:textColor="@color/textDark"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:fontFamily="@font/inter_bold"
                    android:text="@string/rekomendasi"
                    android:textColor="@color/textDark"
                    android:textSize="16sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rekomendasiRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:fontFamily="@font/inter_bold"
                    android:text="@string/title_diagnosa"
                    android:textColor="@color/textDark"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/diagnosis_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:fontFamily="@font/inter_reguler"
                    android:justificationMode="inter_word"
                    android:text="@string/diagnosa_title"
                    android:textColor="@color/textDark"
                    android:textSize="14sp" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</ScrollView>